# VTK-m

./: BUILD.notes  CMakeLists.txt  README  commit-msg  pre-commit
CMake/: VTKmConfig.cmake.in
benchmarking/: BenchmarkInSitu.cxx  BenchmarkRayTracingMPI.cxx  CMakeLists.txt  vtkm.module
examples/: CMakeLists.txt
examples/demo/: Demo.cxx
examples/frontier_benchmark/: CMakeLists.txt  FrontierBenchmark.cxx
examples/ising/: Ising.cxx
examples/lagrangian/: lagrangian.cxx
examples/multi_backend/: MultiDeviceGradient.h
examples/multi_block/: MultiBlock.cxx  makeScript.py
examples/poincare/: .#Poincare.cxx.WORKS  CMakeLists.txt  ComputeAs.h  ComputeAsCell.h  ComputeB.h  ComputeBCell.h  EvaluateAtNodes.h  FindMaxR.cxx  Poincare.cxx  Poincare.h  Poincare2.1.h  Poincare2.h  Poincare2_multi_particle.h  Poincare3.h  README  RunPoincare2.cxx  RunPoincare2.h  SavePoincare.cxx  SavePoincare.h  Simple.cxx  Simple2.2.cxx  Simple2.3.cxx  Simple2.cxx  Simple3.cxx  Simple4.cxx  XGCHelpers.h  XGCParameters.h  io.cxx  io.h  summitRun
examples/poincare/scripts/: bp2txt.py  createBP2txt.py  createRunScript.py  plotHist.py  plotPoincare.py  plotXGC.py
examples/polyline_archimedean_helix/: PolyLineArchimedeanHelix.cxx
examples/streamline_mpi/: Block.cxx  Block.h  CMakeLists.txt  StreamlineMPI.cxx
examples/threaded_filters/: .#TaskQueue.h  CMakeLists.txt  ThreadedFilters.cxx
vtkm/: Bounds.h  CMakeLists.txt  Particle.h
vtkm/cont/: ArrayHandleGroupVec.h  CMakeLists.txt  CellLocatorChooser.h  CellLocatorGeneral.cxx  CellLocatorGeneral.h  CellLocatorTwoLevel.cxx  CellLocatorUniformBins.cxx  CellLocatorUniformBins.h  CellLocatorXGCGrid.cxx  CellLocatorXGCGrid.h  CellSetExtrude.h  CellSetList.h  DefaultTypes.h.in  PartitionedDataSet.cxx  PartitionedDataSet.h  StorageList.h
vtkm/exec/: CMakeLists.txt  CellLocatorBoundingIntervalHierarchy.h  CellLocatorMultiplexer.h  CellLocatorTwoLevel.h  CellLocatorUniformBins.h  CellLocatorXGCGrid.h  ConnectivityExtrude.h  LocatorTimer.h
vtkm/rendering/: Actor.cxx  Actor.h  CMakeLists.txt  Canvas.cxx  Canvas.h  MapperRayTracer.cxx  MapperRayTracer.h  View.cxx  View.h  View1D.cxx  View2D.cxx  View3D.cxx  View3D.h  vtkm.module
vtkm/rendering/compositing/: AbsorptionPartial.h  Compositor.cxx  Compositor.h  DirectSendCompositor.cxx  DirectSendCompositor.h  EmissionPartial.h  Image.cxx  Image.h  ImageCompositor.h  PNGEncoder.cxx  PartialCompositor.cxx  PartialCompositor.h  PayloadCompositor.cxx  PayloadCompositor.h  PayloadImage.cxx  PayloadImage.h  PayloadImageCompositor.h  RadixKCompositor.cxx  RadixKCompositor.h  VolumePartial.h  vtkm_diy_collect.h  vtkm_diy_image_block.h  vtkm_diy_partial_blocks.h  vtkm_diy_partial_collect.h  vtkm_diy_partial_redistribute.h  vtkm_diy_utils.h
vtkm/rendering/raytracing/: RayTracer.cxx  RayTracer.h
vtkm/rendering/testing/: CMakeLists.txt  UnitTestImageCompositing.cxx  UnitTestMapperRayTracer.cxx  UnitTestRendering_par.cxx  t_vtkm_test_utils.h  t_vtkm_test_utils.hpp
vtkm/rendering/testlib/: RenderTest.cxx
vtkm/rendering/vtkh/: DataSet.cpp  DataSet.hpp  vtkh.cpp  vtkh.hpp
vtkm/rendering/vtkh/compositing/: AbsorptionPartial.h  AbsorptionPartial.hpp  CMakeLists.txt.ORIG  Compositor.cpp  Compositor.cxx  Compositor.h  Compositor.hpp  DirectSendCompositor.cpp  DirectSendCompositor.cxx  DirectSendCompositor.h  DirectSendCompositor.hpp  EmissionPartial.hpp  Image.cpp  Image.cxx  Image.h  Image.hpp  ImageCompositor.h  ImageCompositor.hpp  MPICollect.hpp  PNGEncoder.cxx  PNGEncoder.h  PartialCompositor.cpp  PartialCompositor.cxx  PartialCompositor.h  PartialCompositor.hpp  PayloadCompositor.cpp  PayloadCompositor.cxx  PayloadCompositor.h  PayloadCompositor.hpp  PayloadImage.cpp  PayloadImage.cxx  PayloadImage.h  PayloadImage.hpp  PayloadImageCompositor.h  PayloadImageCompositor.hpp  RadixKCompositor.cpp  RadixKCompositor.cxx  RadixKCompositor.h  RadixKCompositor.hpp  VolumePartial.hpp  (+12 more)
vtkm/rendering/vtkh/compositing/internal/diy/include/diy/fmt/: format.h  ostream.h
vtkm/rendering/vtkh/compositing/internal/diy/include/diy/thread/: fast_mutex.h
vtkm/rendering/vtkh/filters/: Filter.cpp  Filter.hpp  ParticleMerging.cpp  ParticleMerging.cxx  ParticleMerging.h  ParticleMerging.hpp
vtkm/rendering/vtkh/rendering/: .#CMakeLists.txt.ORIG  Annotator.cpp  Annotator.cxx  Annotator.hpp  CMakeLists.txt  LineRenderer.cpp  LineRenderer.cxx  LineRenderer.h  LineRenderer.hpp  MeshRenderer.cpp  MeshRenderer.cxx  MeshRenderer.h  MeshRenderer.hpp  Plot.cxx  Plot.h  PointRenderer.cpp  PointRenderer.cxx  PointRenderer.h  PointRenderer.hpp  RayTracer.cpp  RayTracer.cxx  RayTracer.h  RayTracer.hpp  Render.cpp  Render.hpp  Renderer.cpp  Renderer.cxx  Renderer.h  Renderer.hpp  ScalarRenderer.cpp  ScalarRenderer.cxx  ScalarRenderer.h  ScalarRenderer.hpp  Scene.cpp  Scene.cxx  Scene.h  Scene.hpp  VolumeRenderer.cpp  VolumeRenderer.cxx  VolumeRenderer.h  (+1 more)
vtkm/rendering/vtkh/utils/: vtkm_array_utils.cpp  vtkm_array_utils.cxx  vtkm_array_utils.h  vtkm_array_utils.hpp  vtkm_dataset_info.cpp  vtkm_dataset_info.cxx  vtkm_dataset_info.h  vtkm_dataset_info.hpp
vtkm/rendering_new/: Annotator.cxx  Annotator.h  CMakeLists.txt  LineRenderer.cxx  LineRenderer.h  MeshRenderer.cxx  MeshRenderer.h  Plot.cxx  Plot.h  PointRenderer.cxx  PointRenderer.h  RayTracer.cxx  RayTracer.h  Renderer.cxx  Renderer.h  ScalarRenderer.cxx  ScalarRenderer.h  Scene.cxx  Scene.h  VolumeRenderer.cxx  VolumeRenderer.h  vtkm.module
vtkm/rendering_new/compositing/: AbsorptionPartial.h  Compositor.cxx  Compositor.h  DirectSendCompositor.cxx  DirectSendCompositor.h  EmissionPartial.h  Image.cxx  Image.h  ImageCompositor.h  PNGEncoder.cxx  PNGEncoder.h  PartialCompositor.cxx  PartialCompositor.h  PayloadCompositor.cxx  PayloadCompositor.h  PayloadImage.cxx  PayloadImage.h  PayloadImageCompositor.h  RadixKCompositor.cxx  RadixKCompositor.h  VolumePartial.h  vtkh_diy_collect.h  vtkh_diy_image_block.h  vtkh_diy_partial_blocks.h  vtkh_diy_partial_collect.h  vtkh_diy_partial_redistribute.h  vtkh_diy_utils.h
vtkm/rendering_new/testing/: CMakeLists.txt  UnitTestRendering_par.cxx
(+98 files in other folders)
